# foRMA

./: .gitignore  .gitlab-ci.yml  README.md  dumpi_rma_summary.py  dumpi_rma_summary_fsm.py  dumpi_sum.py  dumpifile.py  footer_reader.sh  forma-0.1.1-foss2022a.eb  forma-0.1.2-foss2022a.eb  forma-0.1.4-foss2022a.eb  forma-0.1.5-foss2022a.eb  forma-0.1.6-foss2022a.eb  forma-banner.txt  forma.eb  forma.py  forma_aux.py  forma_classes.py  forma_config.py  forma_constants.py  forma_logging.py  forma_parse.py  forma_prints.py  forma_stats.py  forma_trace.py  github-token  in_mem_profiler.py  per_rank.txt  per_window.txt  profileRMA.py  pyproject.toml  rma_profiler.py  setup.py  summary.avsc  summary.txt  win_lifetime
doc/: internals.md  internals.md.backup  pydumpi.md  pydumpi.md.backup  sst-dumpi  timing.md
schemas/: epochstats.avsc  summary.avsc
src/: forma.py  forma_aux.py  forma_parse.py
src/forma/: forma.py  forma_aux.py  forma_classes.py  forma_config.py  forma_parse.py  forma_prints.py  forma_stats.py  forma_trace.py
src/forma/schemas/: epochstats.avsc
